<resources>
    <string name="app_name">车图</string>
    <string name="doing">该功能正在开发</string>
    <!--界面标题-->
    <string name="user_login">登录</string>
    <string name="user_register">注册账号</string>
    <string name="index">首页</string>
    <string name="fragment_index">首页</string>
    <string name="fragment_me">我的</string>
    <string name="fragment_near">附近</string>
    <string name="str_double_click_exit">再点一次退出应用</string>
    <string name="confim_psw">请确认密码</string>
    <string name="confim_psw_tips">确认密码</string>
    <string name="phone_number_string">手机号</string>
    <string name="write_phone_number">请输入手机号码</string>
    <string name="check_code">验证码</string>
    <string name="write_check_code">请输入验证码</string>
    <string name="get_check_code">获取验证码</string>
    <string name="password">密码</string>
    <string name="write_password">请输入密码</string>
    <string name="search_string">搜索</string>
    <string name="string_street_list">街道列表</string>
    <string name="free_park_string">空车位</string>
    <string name="pay_result_tip">这个界面用于显示第三方app通过微信支付的结果</string>
    <string name="me_mycar_string">我的车辆</string>
    <string name="part_record_string">停车记录</string>
    <string name="mycoupon_string">优惠劵</string>
    <string name="about_me_string">关于我们</string>
    <string name="connect_me_string">联系我们</string>
    <string name="complaints_proposals_string">投诉建议</string>
    <string name="common_problem_string">常见问题</string>
    <string name="title_activity_find_password">FindPasswordActivity</string>
    <string name="findpsw_string">找回密码</string>
    <string name="title_activity_reset">ResetActivity</string>
    <string name="personal_data_string">个人资料</string>
    <string name="setting_string">设置</string>
    <string name="setting_message_reminding">消息提醒</string>
    <string name="setting_down_map_string">离线地图</string>
    <string name="setting_account_safe_string">账号安全</string>
    <string name="setting_clean_cash">清除缓存</string>
    <string name="balance_setting">余额</string>
    <string name="coupons_string">优惠劵</string>
    <string name="my_reservation_string">我的预约</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_car_string">我的车辆</string>
    <string name="add_car_string">添加车辆</string>
    <string name="park_record_string">停车记录</string>
    <string name="about_string">关于我们</string>
    <string name="contact_string">联系我们</string>
    <string name="suggest_string">投诉建议</string>
    <string name="reverse_car_string">反向寻车</string>
    <string name="direct_parking_string">我要停车</string>
    <string name="reserve_pariking_sting">预定车位</string>
    <string name="quick_rechage_string">快速充值</string>
    <string name="pay_fare_string">待缴车费</string>
    <string name="my_bills_string">我的账单</string>
    <string name="parking_info_string">停车资讯</string>
    <string name="reserve_record_string">预约记录</string>
    <string name="my_account_bill_string">我的账单</string>
    <string name="my_reserve_string">我的预约</string>
    <string name="str_please_login">请先登录</string>
    <!--自定义日期选择器-->
    <string name="cancle">取消</string>
    <string name="title">请选择时间</string>
    <string name="commit">确定</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="hour">时</string>
    <string name="minute">分</string>
    <string name="find_car_string">反向寻车</string>
    <string name="delet_car_failed">删除车辆失败</string>
    <string name="delete_car_success">删除车辆成功</string>
    <string name="reset_password_string">重置密码</string>
</resources>
